--- a/Client/css/add.css
+++ b/Client/css/add.css
@@ -20,9 +20,32 @@
 .aside {
   height: 100%;
   background-color: rgba(111,111,111,0.9);
+
+}
+.docs-cont {
+  overflow: scroll;
+  height: 85%;
+  margin:0px;
+  padding:0px;
+}
+.doc-thumb-container {
+  border-top: solid 1px rgba(157, 160, 163, 1);
 }
 
+.image-cont, .text-cont, .text-cont h3 {
+  margin:0px;
+  padding: 3px;
+}
+.doc-img {
+  margin:15px 5px;
+  height: 50px;
+}
 .main-content {
   height: 100%;
+  background-color: rgba(255,255,255,0.95);
+  overflow: scroll;
   /*background-color: rgba(211,211,211,0.9);*/
+}
+#map-canvas {
+  height:400px;
 }
