--- a/Client/partials/home.html
+++ b/Client/partials/home.html
@@ -1,10 +1,118 @@
 <div class="container-fluid homepage">
   <div class="row-fluid homepage-content">
     <div class="col-md-3 aside">
-      aaaaaaa
+      <div>
+        <h1>Documents</h1>
+      </div>
+      <div class="docs-cont">
+        <!--REPLACE WITH ng-repeat-->
+
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+        <div class="row doc-thumb-container">
+          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
+          <div class="text-cont col-md-9">
+            <h3>{{Doc title}}</h3>
+            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+          </div>
+        </div>
+        <!--STOP REPLACE-->
+      </div>
+
+
     </div>
     <div class="col-md-9 main-content">
-      bbb
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9" style="padding-top:40px;">
+
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-xs-12 col-sm-8">
+                    <h2>{{Name Lastname}}</h2>
+                    <p><strong>Born: </strong> {{00-00-0000}} </p>
+                    <p><strong>Subscription date: </strong> {{00-00-0000}} </p>
+                    <p><strong>Type: </strong>
+                      <span class="label label-primary tags">basic</span>
+                      <span class="label label-success tags">premium</span>
+                      <span class="label label-warning tags">admin</span>
+                    </p>
+                  </div><!--/col-->
+                  <div class="col-xs-12 col-sm-4 text-center">
+                    <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="center-block img-circle img-responsive">
+                  </div><!--/col-->
+
+                  <div class="col-xs-12 col-sm-4 text-center">
+                    <h2><strong> 245 </strong></h2>
+                    <p><small>Documents</small></p>
+                    <button class="btn btn-success btn-block"><span class="fa fa-file-word-o"></span> View Docs </button>
+                  </div><!--/col-->
+                  <div class="col-xs-12 col-sm-4 text-center">
+                    <h2><strong>5</strong></h2>
+                    <p><small>Groups</small></p>
+                    <button class="btn btn-info btn-block"><span class="fa fa-users"></span> View Groups </button>
+                  </div><!--/col-->
+
+                </div><!--/row-->
+                <div class="row">
+                  <div class="col-xs-12 col-sm-2 col-md-offset-10">
+                    <button class="btn btn-info btn-block"><span class="fa fa-cogs"></span> Edit </button>
+                  </div><!--/col-->
+                  <a href="http://bootstrap.snipplicious.com/snippet/19/edit-profile-page">Plugin per modificare profilo</a>
+                </div>
+              </div><!--/panel-body-->
+            </div><!--/panel-->
+
+
+
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
