--- a/Client/templates/header.html
+++ b/Client/templates/header.html
@@ -8,31 +8,46 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-            <a class="navbar-brand" href="#/">ACME</a>
+            <a class="navbar-brand" href="#/"><b>Mergefy</b></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/services">Services</a>
-                </li>
-                <li><a href="#/pricing">Pricing Table</a>
-                </li>
-                <li><a href="#/about">About</a>
-                </li>
-                <li><a href="#/faq">FAQ</a>
-                </li>
-                <li><a href="#/contact">Contact</a>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#/blog">List of Posts</a>
-                        </li>
-                        <li><a href="#/blog/post">View One Post</a>
-                        </li>
-                    </ul>
-                </li>
+        <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
+
+
+
+
+
+          <ul class="nav navbar-nav ">
+            <li>
+              <form class="navbar-form navbar" role="search">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search" name="q">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                  </div>
+                </div>
+              </form>
+            </li>
+            <li><a href="#/services">345345</a>
+            </li>
+            <li><a href="#/pricing">Profile</a>
+            </li>
+            <li><a href="#/event">Event</a>
+            </li>
+            <li><a href="#/faq">FAQ</a>
+            </li>
+            <li><a href="#/contact">Contact</a>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#/blog">List of Posts</a>
+                    </li>
+                    <li><a href="#/blog/post">View One Post</a>
+                    </li>
+                </ul>
+            </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
