--- a/Client/templates/header.html
+++ b/Client/templates/header.html
@@ -31,7 +31,7 @@
             </li>
             <li><a href="#/services">345345</a>
             </li>
-            <li><a href="#/pricing">Profile</a>
+            <li><a href="#/profile">Profile</a>
             </li>
             <li><a href="#/event">Event</a>
             </li>
