--- a/Client/partials/copy.html
+++ b/Client/partials/copy.html
@@ -1,6 +1,6 @@
 
 <div class="col-md-6">
-  <h2>Pizzata da Giuseppe</h2>
+  <h2>Titolo Evenot</h2>
   <p><strong>Category: </strong>
     <span class="label label-primary tags">sport</span>
     <span class="label label-success tags">meeting</span>
@@ -8,8 +8,8 @@
   </p>
   <p><i>Creator: Mario Rossi 24/03/2016</i></p>
   <h3>Description</h3>
-  <p>[[ Description [[ This is a great place to introduce your company or project and describe what you do. This about page
-    features general company information, employee bios, and other helpful elements.</p>
+  <p>[[ Description This is a great place to introduce your company or project and describe what you do. This about page
+    features general company information, employee bios, and other helpful elements. ]]</p>
   <span><b>Start:</b> 00/00/2016</span>
   <span><b>Stop:</b> 00/00/2016</span>
 
