--- a/Client/partials/profile.html
+++ b/Client/partials/profile.html
@@ -1,4 +1,4 @@
-<div class="container text-center" style="margin-top:30px;">
+<div class="container" style="margin-top:30px;">
   <div class="row">
     <div class="col-md-9" style="">
 
@@ -6,9 +6,9 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-xs-12 col-sm-8">
-              <h2>{{Name Lastname}}</h2>
-              <p><strong>Born: </strong> {{00-00-0000}} </p>
-              <p><strong>Subscription date: </strong> {{00-00-0000}} </p>
+              <h2>Mario Rossi<input type="text" class="form-control" aria-label=""></h2>
+              <p><strong>Born: </strong> 00-00-0000<input type="text" class="form-control" aria-label="..."> </p>
+              <p><strong>Subscription date: </strong>00-00-0000</p>
               <p><strong>Type: </strong>
                 <span class="label label-primary tags">basic</span>
                 <span class="label label-success tags">premium</span>
@@ -17,6 +17,8 @@
             </div><!--/col-->
             <div class="col-xs-12 col-sm-4 text-center">
               <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="center-block img-circle img-responsive">
+              <p>Upload different photo</p>
+              <input type="file" class="well well-sm col-sm-12">
             </div><!--/col-->
 
             <div class="col-xs-12 col-sm-4 text-center">
