--- a/Client/templates/header.html
+++ b/Client/templates/header.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-            <a class="navbar-brand" href="#/"><b>Mergefy</b></a>
+            <a class="navbar-brand" href="#/"><b>< MERGEFY ></b></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -33,11 +33,11 @@
             </li>
             <li><a href="#/profile">Profile</a>
             </li>
-            <li><a href="#/event">Event</a>
+            <li><a href="#/events">Events</a>
             </li>
-            <li><a href="#/faq">FAQ</a>
+            <li><a href="#/doc">Documents</a>
             </li>
-            <li><a href="#/contact">Contact</a>
+            <li><a href="#/addevent">+ Evento</a>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
