--- a/Client/partials/event.html
+++ b/Client/partials/event.html
@@ -1,135 +1,160 @@
-<div class="container homepage">
-  <div class="row homepage-content">
-    <div class="col-md-3 aside">
+<div style="overflow:scroll; height:95%">
+  <div class="container">
 
-      <h2>Events</h2>
-      <ul class="nav nav-pills">
-        <li class="active"><a ng-click="changeEvents(true)" data-toggle="pill">Vicino</a></li>
-        <li class=""><a ng-click="changeEvents(false)" data-toggle="pill">Partecipo</a></li>
-      </ul>
-      <div class="row " style="margin:0px;">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-              </span>
-        </div><!-- /input-group -->
-      </div>
-
-      <div class="docs-cont">
-        <!--REPLACE WITH ng-repeat-->
-        <!--TAB 1-->
-        <div class="pill-content" ng-show="eventsNavbar">
-          <div class="pill-pane active" id="near">
-            <div class="row doc-thumb-container">
-              <div class="image-cont col-md-3"><img src="css/img/place.png" class="img-responsive doc-img" alt="Responsive image"></div>
-              <div class="text-cont col-md-9">
-                <h3>Evento Vicino</h3>
-                <p>[[Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...]]</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--TAB 2-->
-        <div class="pill-content" ng-hide="eventsNavbar" style="overflow: scroll; height: 90%;">
-          <div class="pill-pane active" id="joined">
-
-            <div class="media clearfix doc-thumb-container">
-              <div class="pull-left media-top">
-                  <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="">
-                <h4 class="">Evento Partecipo</h4>
-                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-              </div>
-            </div>
-
-            <div class="media clearfix doc-thumb-container">
-              <div class="pull-left media-top">
-                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="">
-                <h4 class="">Evento Partecipo</h4>
-                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-              </div>
-            </div>
-
-            <div class="media clearfix doc-thumb-container">
-              <div class="pull-left media-top">
-                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="">
-                <h4 class="">Evento Partecipo</h4>
-                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-              </div>
-            </div>
-
-            <div class="media clearfix doc-thumb-container">
-              <div class="pull-left media-top">
-                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="">
-                <h4 class="">Evento Partecipo</h4>
-                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-              </div>
-            </div>
-
-            <div class="media clearfix doc-thumb-container">
-              <div class="pull-left media-top">
-                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="">
-                <h4 class="">Evento Partecipo</h4>
-                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-              </div>
-            </div>
-
-            <div class="media clearfix doc-thumb-container">
-              <div class="pull-left media-top">
-                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="">
-                <h4 class="">Evento Partecipo</h4>
-                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-              </div>
-            </div>
-
-
-
-          </div>
-
-        </div>
-
-
-
-
-        <!--STOP REPLACE-->
-      </div>
-
-
+    <div class="col-md-6" map-lazy-load="https://maps.google.com/maps/api/js">
+      <ng-map default-style="true" center="44.494907, 11.326638" zoom="13">
+        <marker position="44.501482, 11.330802" title="Hello World!"></marker>
+      </ng-map>
     </div>
 
-    <div class="col-md-9 main-content" ng-init="init()">
-      <div class="row">
-        <!--<div id="map-canvas" class="col-md-12"></div>-->
-        <div map-lazy-load="https://maps.google.com/maps/api/js">
-          <ng-map default-style="true" center="44.494907, 11.326638" zoom="13">
-            <marker position="44.501482, 11.330802" title="Hello World!"></marker>
-            <marker position="44.494907, 11.326638" title="Hello World!"></marker>
-            <!--<marker position="44.4972646,11.3471621" title="Hello World!"></marker>-->
-            <marker id="foo" position="44.4972646,11.3471621"
-                    on-click="map.showInfoWindow(event, 'bar')">
-            </marker>
-            <info-window id="bar" max-width="200">
-              <div ng-non-bindable>
-                asd
-                </div>
-              </info-window>
-          </ng-map>
-        </div>
-      </div>
-      <script type="text/javascript" src="js/map.js"></script>
-    </div>
+  <div class="col-md-6">
+    <h2>Titolo Evento</h2>
+    <p><strong>Category: </strong>
+      <span class="label label-primary tags">sport</span>
+      <span class="label label-success tags">meeting</span>
+      <span class="label label-warning tags">workshop</span>
+    </p>
+    <p><i>Creator: Mario Rossi 24/03/2016</i></p>
+    <h3>Description</h3>
+    <p>[[ Description This is a great place to introduce your company or project and describe what you do. This about page
+      features general company information, employee bios, and other helpful elements. ]]</p>
+    <span><b>Start:</b> 00/00/2016</span>
+    <span><b>Stop:</b> 00/00/2016</span>
+
+
   </div>
+
+  <!-- Team Member Profiles -->
+
+  <div class="row">
+
+    <div class="col-sm-6">
+      <h2 class="page-header">Partecipants</h2>
+    </div>
+
+    <div class="col-sm-1">
+      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+
+      <h3>John Smith
+        <small>Job Title</small>
+      </h3>
+      <ul class="list-unstyled list-inline list-social-icons">
+        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="Facebook"><i
+          class="fa fa-facebook-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="LinkedIn"><i
+          class="fa fa-linkedin-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
+                                                       data-placement="top" title="Google+"><i
+          class="fa fa-google-plus-square fa-2x"></i></a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-sm-1">
+      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+
+      <h3>John Smith
+        <small>Job Title</small>
+      </h3>
+      <ul class="list-unstyled list-inline list-social-icons">
+        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="Facebook"><i
+          class="fa fa-facebook-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="LinkedIn"><i
+          class="fa fa-linkedin-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
+                                                       data-placement="top" title="Google+"><i
+          class="fa fa-google-plus-square fa-2x"></i></a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-sm-1">
+      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+
+      <h3>John Smith
+        <small>Job Title</small>
+      </h3>
+      <ul class="list-unstyled list-inline list-social-icons">
+        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="Facebook"><i
+          class="fa fa-facebook-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="LinkedIn"><i
+          class="fa fa-linkedin-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
+                                                       data-placement="top" title="Google+"><i
+          class="fa fa-google-plus-square fa-2x"></i></a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-sm-1">
+      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+
+      <h3>John Smith
+        <small>Job Title</small>
+      </h3>
+      <ul class="list-unstyled list-inline list-social-icons">
+        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="Facebook"><i
+          class="fa fa-facebook-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                                                    data-placement="top" title="LinkedIn"><i
+          class="fa fa-linkedin-square fa-2x"></i></a>
+        </li>
+        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
+                                                       data-placement="top" title="Google+"><i
+          class="fa fa-google-plus-square fa-2x"></i></a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Our Customers -->
+
+  <div class="row">
+
+    <div class="col-lg-12">
+      <h2 class="page-header">Some Documents</h2>
+    </div>
+
+    <div class="col-md-2 col-sm-4 col-xs-6">
+      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+    </div>
+
+    <div class="col-md-2 col-sm-4 col-xs-6">
+      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+    </div>
+
+    <div class="col-md-2 col-sm-4 col-xs-6">
+      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+    </div>
+
+    <div class="col-md-2 col-sm-4 col-xs-6">
+      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+    </div>
+
+    <div class="col-md-2 col-sm-4 col-xs-6">
+      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+    </div>
+
+    <div class="col-md-2 col-sm-4 col-xs-6">
+      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+    </div>
+
+
+  </div>
+</div>
 </div>
