--- a/Client/partials/addevent.html
+++ b/Client/partials/addevent.html
@@ -2,22 +2,55 @@
   <div class="container">
 
     <div class="col-md-6" map-lazy-load="https://maps.google.com/maps/api/js">
-      <ng-map default-style="true" center="44.494907, 11.326638" zoom="13">
+
+      <ng-map default-style="true" center="{{vm.address+' '+vm.city}}" zoom="14">
         <marker position="44.501482, 11.330802" title="Hello World!"></marker>
+        <marker position="{{vm.address+' '+vm.city}}" title="{{address}}"></marker>
       </ng-map>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6" style="padding-top:15px;">
       <form>
-        <fieldset class="form-group">
+        <fieldset class="form-group col-md-12">
           <label >Titolo evento</label>
           <input type="text" class="form-control" id="" placeholder="Inserisci titolo">
         </fieldset>
-        <fieldset class="form-group">
+
+        <fieldset class="form-group col-md-12">
           <label for="event-description">Descrizione</label>
           <textarea class="form-control" id="event-description" placeholder="Inserisci testo" rows="4"></textarea>
         </fieldset>
-        <fieldset>
+
+        <fieldset class="clearfix col-md-12" style="padding:0px;">
+          <legend style="padding-left:15px;">Place</legend>
+          <fieldset class="form-group col-md-12">
+            <label >Nome posto</label>
+            <input type="text" class="form-control" id="" placeholder="Nome">
+          </fieldset>
+
+          <fieldset class="form-group col-md-12">
+            <label >Indirizzo</label>
+            <input ng-model="vm.address" class="form-control"  placeholder="Indirizzo" >
+          </fieldset>
+
+          <fieldset class="form-group col-md-6">
+            <label >Città</label>
+            <input ng-model="vm.city" type="text" class="form-control col-md-6" id="" placeholder="Città">
+          </fieldset>
+
+          <fieldset class="form-group col-md-6">
+            <label >Cap</label>
+            <input type="text" class="form-control" id="" placeholder="Cap">
+          </fieldset>
+
+          <fieldset class="form-group col-md-12">
+            <label >Paese</label>
+            <input type="text" class="form-control" id="" placeholder="Nation">
+          </fieldset>
+        </fieldset>
+
+
+        <fieldset class="form-group col-md-12">
           <label>Categoria</label>
           <select class="c-select">
             <option value="1">Sport</option>
@@ -26,10 +59,18 @@
             <option value="3">Altro</option>
           </select>
         </fieldset>
-        start + stop ?
-        <button class="btn btn-primary">Invita</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <fieldset class="col-md-12 clearfix">
+          start + stop ?
+        </fieldset>
+
+        <div class="col-md-12 clearfix">
+          <button class="btn btn-primary">Invita</button>
+          <button type="submit" ng-click="invia(vm.address+''+vm.city)" class="btn btn-primary">Crea evento</button>
+        </div>
+
       </form>
+
+
     </div>
 
   </div>
