--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -21,13 +21,17 @@
         <!--TAB 1-->
         <div class="pill-content" ng-show="eventsNavbar">
           <div class="pill-pane active" id="near">
-            <div class="row doc-thumb-container">
-              <div class="image-cont col-md-3"><img src="css/img/place.png" class="img-responsive doc-img" alt="Responsive image"></div>
-              <div class="text-cont col-md-9">
-                <h3>Evento Vicino</h3>
-                <p>[[Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...]]</p>
+
+            <div class="media clearfix doc-thumb-container">
+              <div class="pull-left media-top">
+                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+              </div>
+              <div class="">
+                <h4 class="">Evento Vicino</h4>
+                <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
               </div>
             </div>
+
           </div>
         </div>
 
