--- a/Client/partials/home.html
+++ b/Client/partials/home.html
@@ -6,66 +6,104 @@
       </div>
       <div class="docs-cont">
         <!--REPLACE WITH ng-repeat-->
-
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
+          </div>
+        </div>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Document title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
+          </div>
+        </div>
+
+
         <!--STOP REPLACE-->
       </div>
 
 
     </div>
     <div class="col-md-9 main-content" style="background-color: transparent;">
-        <h1> {{ clock  | date:'HH:mm:'}} </h1>
+        <h1 style="font-size: 84px;color: #ffffff;position: absolute;bottom: 30px;left:40px;"> 15:22</h1>
 
 
     </div>
