--- a/Client/css/add.css
+++ b/Client/css/add.css
@@ -28,6 +28,9 @@
   margin:0px;
   padding:0px;
 }
+
+
+
 .doc-thumb-container {
   margin: 5px 0px;
   background-color: rgb(225, 232, 237);
@@ -57,8 +60,13 @@
 }
 .document-container {
   overflow: scroll;
-  height:80%;
+  height:85%;
 }
+
+.document-container-complete {
+  overflow: scroll;
+}
+
 .document {
   width: 92%;
   padding:20px 30px;
@@ -72,13 +80,20 @@
 }
 
 .insert-node {
-  background-color: #ffffff;
+  background-color: rgba(248, 245, 247, 0.96);
   position: fixed;
   bottom:0;
   right:0;
   width:75%;
   padding: 10px 15px;
   hight:40%;
+  box-shadow: 1px 1px 20px rgba(123,123,123,0.5);
+}
+.insert-node-collapsed {
+  height:15%;
+}
+.insert-node-complete {
+  height:40%;
 }
 
 .search-place {
@@ -90,4 +105,25 @@
 .search-place input {
   width:400px;
   padding:5px;
+}
+
+.overlay {
+  position: absolute;
+  left:0;
+  top:45px;
+  background-color: rgba(123,123,123,0.6);
+  height: 100%;
+
+}
+.overlay-box {
+  position: absolute;
+  background-color: #ffffff;
+  margin: 20px auto 0 auto;
+  padding: 20px;
+
+  top: 50px;
+  left: 50px;
+
+  right: 50px;
+
 }
