--- a/Client/partials/document.html
+++ b/Client/partials/document.html
@@ -3,63 +3,91 @@
   <div class="row-fluid homepage-content">
     <div class="col-md-3 aside">
       <div>
-        <h1>Documents</h1>
+        <h1>Last Notes</h1>
       </div>
       <div class="docs-cont">
         <!--REPLACE WITH ng-repeat-->
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
 
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
-        <div class="row doc-thumb-container">
-          <div class="image-cont col-md-3"><img src="css/img/document.png" class="img-responsive doc-img" alt="Responsive image"></div>
-          <div class="text-cont col-md-9">
-            <h3>{{Doc title}}</h3>
-            <p>{{Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa...}}</p>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
           </div>
         </div>
+
+        <div class="media clearfix doc-thumb-container">
+          <div class="pull-left media-top">
+            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+          </div>
+          <div class="">
+            <h4 class="">Note title</h4>
+            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
+          </div>
+        </div>
+
         <!--STOP REPLACE-->
       </div>
 
@@ -75,16 +103,16 @@
       </div>
 
 
-      <div class="insert-node">
+      <div class="insert-node" ng-class="{'insert-node-collapsed': !toggle, 'insert-node-complete': toggle }">
         <form>
           <div class="row">
             <fieldset class="form-group col-md-5">
               <label>Titolo nodo (opzionale)</label>
-              <input type="text" class="form-control" id="note-title"></input>
+              <input type="text" class="form-control" id="note-title"/>
 
             </fieldset>
             <div class="col-md-7">
-              <span class="glyphicon glyphicon-chevron-down pull-right" > on click botttom 0</span>
+              <span class="glyphicon  pull-right" ng-class="{'glyphicon-chevron-down': toggle, 'glyphicon-chevron-up': !toggle}" ng-click="toggleView()"></span>
             </div>
           </div>
           <div class="row">
@@ -106,7 +134,7 @@
                 </select>
             </fieldset>
             <button type="submit" class="btn btn-primary">Aggiungi nodo</button>
-            <button type="submit" class="btn btn-primary pull-right">Fine</button>
+            <button type="submit" class="btn btn-primary">Fine</button>
           </div>
 
 
