--- a/Client/partials/event.html
+++ b/Client/partials/event.html
@@ -30,95 +30,47 @@
 
     <div class="col-sm-6">
       <h2 class="page-header">Partecipants</h2>
+      <div class="group-members-list">
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+
+        <div class="col-sm-2">
+          <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
+          <h5 class="small">John Smith</h5>
+        </div>
+      </div>
     </div>
 
-    <div class="col-sm-1">
-      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-
-      <h3>John Smith
-        <small>Job Title</small>
-      </h3>
-      <ul class="list-unstyled list-inline list-social-icons">
-        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="Facebook"><i
-          class="fa fa-facebook-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="LinkedIn"><i
-          class="fa fa-linkedin-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                       data-placement="top" title="Google+"><i
-          class="fa fa-google-plus-square fa-2x"></i></a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="col-sm-1">
-      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-
-      <h3>John Smith
-        <small>Job Title</small>
-      </h3>
-      <ul class="list-unstyled list-inline list-social-icons">
-        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="Facebook"><i
-          class="fa fa-facebook-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="LinkedIn"><i
-          class="fa fa-linkedin-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                       data-placement="top" title="Google+"><i
-          class="fa fa-google-plus-square fa-2x"></i></a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="col-sm-1">
-      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-
-      <h3>John Smith
-        <small>Job Title</small>
-      </h3>
-      <ul class="list-unstyled list-inline list-social-icons">
-        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="Facebook"><i
-          class="fa fa-facebook-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="LinkedIn"><i
-          class="fa fa-linkedin-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                       data-placement="top" title="Google+"><i
-          class="fa fa-google-plus-square fa-2x"></i></a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="col-sm-1">
-      <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-
-      <h3>John Smith
-        <small>Job Title</small>
-      </h3>
-      <ul class="list-unstyled list-inline list-social-icons">
-        <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="Facebook"><i
-          class="fa fa-facebook-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                    data-placement="top" title="LinkedIn"><i
-          class="fa fa-linkedin-square fa-2x"></i></a>
-        </li>
-        <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                       data-placement="top" title="Google+"><i
-          class="fa fa-google-plus-square fa-2x"></i></a>
-        </li>
-      </ul>
-    </div>
 
   </div>
 
@@ -127,32 +79,29 @@
   <div class="row">
 
     <div class="col-lg-12">
-      <h2 class="page-header">Some Documents</h2>
+      <h2 class="page-header">Documenti dell'evento</h2>
+    </div>
+
+    <div class="col-md-2 col-sm-2 col-xs-6">
+      <img class="img-responsive img-customer" src="css/img/document.png">
+      <h4>Titolo Doc</h4>
     </div>
 
     <div class="col-md-2 col-sm-4 col-xs-6">
-      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+      <img class="img-responsive img-customer" src="css/img/document.png">
+      <h4>Titolo Doc</h4>
     </div>
 
     <div class="col-md-2 col-sm-4 col-xs-6">
-      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+      <img class="img-responsive img-customer" src="css/img/document.png">
+      <h4>Titolo Doc</h4>
     </div>
 
     <div class="col-md-2 col-sm-4 col-xs-6">
-      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+      <img class="img-responsive img-customer" src="css/img/document.png">
+      <h4>Titolo Doc</h4>
     </div>
 
-    <div class="col-md-2 col-sm-4 col-xs-6">
-      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-    </div>
-
-    <div class="col-md-2 col-sm-4 col-xs-6">
-      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-    </div>
-
-    <div class="col-md-2 col-sm-4 col-xs-6">
-      <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-    </div>
 
 
   </div>
