--- a/Client/templates/header.html
+++ b/Client/templates/header.html
@@ -1,56 +1,45 @@
-<nav class="navbar navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-            <a class="navbar-brand" href="#/"><b>< MERGEFY ></b></a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
-
-
-
-
-
-          <ul class="nav navbar-nav ">
-            <li>
-              <form class="navbar-form navbar" role="search">
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search" name="q">
-                  <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                  </div>
-                </div>
-              </form>
-            </li>
-            <li><a href="#/services">345345</a>
-            </li>
-            <li><a href="#/profile">Profile</a>
-            </li>
-            <li><a href="#/events">Events</a>
-            </li>
-            <li><a href="#/doc">Documents</a>
-            </li>
-            <li><a href="#/addevent">+ Evento</a>
-            </li>
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#/blog">List of Posts</a>
-                    </li>
-                    <li><a href="#/blog/post">View One Post</a>
-                    </li>
-                </ul>
-            </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" style="padding: 5px 5px;" href="#"><img src="css/img/merge.jpg" style="height: 100%; width:auto; "> Mergefy</a>
     </div>
-    <!-- /.container -->
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><form class="navbar-form" role="search">
+          <div class="input-group">
+            <input type="text" class="form-control pull-right" style="width: 300px; background-color: #e5e5e5;" placeholder="Search">
+						<span class="input-group-btn">
+							<button type="submit" class="btn btn-default">
+								<span class="glyphicon glyphicon-search">
+									<span class="sr-only">Search</span>
+								</span>
+              </button>
+						</span>
+          </div>
+        </form></li>
+        <li><a href="#/doc">Documenti</a></li>
+        <li><a href="#/events">Eventi</a></li>
+        <li><a href="#/addevent">+ Evento</a></li>
+        <li><a href="" data-toggle="popover" title="Gruppi" data-placement="bottom" data-content="Voglio caricare partials/groups.html qui"
+               data-html="true">Gruppi</a></li>
+        <li><a href="#/profile">Profilo</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
+
+<script>
+  $(document).ready(function(){
+    $('[data-toggle="popover"]').popover();
+  });
+</script>
