--- a/Client/templates/header.html
+++ b/Client/templates/header.html
@@ -30,7 +30,7 @@
         <li><a href="#/doc">Documenti</a></li>
         <li><a href="#/events">Eventi</a></li>
         <li><a href="#/addevent">+ Evento</a></li>
-        <li><a href="" data-toggle="popover" title="Gruppi" data-placement="bottom" data-content="Voglio caricare partials/groups.html qui"
+        <li ng-controller="GroupsCtrl"><a href="" data-toggle="popover" title="Gruppi" data-placement="bottom" data-content="{{lol}} <br> Voglio caricare partials/groups.html qui"
                data-html="true">Gruppi</a></li>
         <li><a href="#/profile">Profilo</a></li>
       </ul>
