--- a/Client/partials/document.html
+++ b/Client/partials/document.html
@@ -3,7 +3,7 @@
   <div class="row-fluid homepage-content">
     <div class="col-md-3 aside">
       <div>
-        <h1>Last Notes</h1>
+        <h1>NODI</h1>
       </div>
       <div class="docs-cont">
         <!--REPLACE WITH ng-repeat-->
@@ -153,4 +153,3 @@
   </div>
 </div>
 </div>
-
